--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -3,7 +3,13 @@
       xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <th:block th:replace="fragments/common :: commonFragment"></th:block>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Huneth acadeby management system">
+    <meta name="author" content="huneth">
+    <meta name="generator" content="nomi">
+    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">HAMS</title>
+    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
 </head>
 <body>
     <!--/* header fragment 사용 */-->
