--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    <footer class="text-muted py-5" th:fragment="footerFragment">
-        <div class="container">
+    <footer class="container" th:fragment="footerFragment">
+        <div class="text-muted py-5">
             <p class="float-end mb-1">
                 <a href="#">Back to top</a>
             </p>
