--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -6,6 +6,7 @@ body {
 
 body {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
