--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -3,9 +3,15 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <meta charset="UTF-8">
-    <th:block th:fragment="commonFragment">
-
+    <th:block layout:fragment="commonFragment">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Huneth acadeby management system">
+        <meta name="author" content="huneth">
+        <meta name="generator" content="nomi">
+        <!--<meta name="_csrf" th:content="${_csrf.token}"/>
+        <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+        <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
     </th:block>
 </head>
 <body>
