--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:fragment="headerFragment">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">HAMS</a>
+            <a class="navbar-brand" href="#" th:href="@{/}">HAMS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -15,13 +15,13 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="#" th:href="@{/}">Home</a>
+                        <a class="nav-link" aria-current="page" href="#" th:href="@{/}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">학회</a>
+                        <a class="nav-link" href="#" th:href="@{/academy/list}">학회</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">학술대회</a>
+                        <a class="nav-link" href="#" th:href="@{/conference/list}">학술대회</a>
                     </li>
                     <!--
                     <li class="nav-item">
