--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -3,13 +3,9 @@
       xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Huneth acadeby management system">
-    <meta name="author" content="huneth">
-    <meta name="generator" content="nomi">
+    <th:block layout:replace="~{fragments/common :: commonFragment}"></th:block>
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">HAMS</title>
-    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
     <!--/* header fragment 사용 */-->
@@ -24,6 +20,8 @@
     <!--/* footer fragment 사용 */-->
     <th:block th:replace="fragments/footer :: footerFragment"> </th:block>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script th:src="@{/bootstrap/js/bootstrap.bundle.js}"></script>
+    <script th:src="@{/bootbox/bootbox.all.js}"></script>
 </body>
 </html>
