--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -2,27 +2,29 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/content_layout}">
+      layout:decorate="~{layouts/default_layout}">
 <head>
     <title>Login</title>
     <link rel="stylesheet" th:href="@{/css/signin.css}">
 </head>
 <body>
-<main class="form-signin" layout:fragment="content">
-    <form>
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-        <label for="username" class="visually-hidden">Email address</label>
-        <input type="text" id="username" class="form-control" name="username" required autofocus>
-        <label for="inputPassword" class="visually-hidden">Password</label>
-        <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; [[${#dates.year(#dates.createNow())}]] Huneth, inc.</p>
-    </form>
-</main>
+<div class="container" layout:fragment="content">
+    <main class="form-signin">
+        <form>
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <label for="username" class="visually-hidden">Email address</label>
+            <input type="text" id="username" class="form-control" name="username" required autofocus>
+            <label for="inputPassword" class="visually-hidden">Password</label>
+            <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <!--<p class="mt-5 mb-3 text-muted">&copy; [[${#dates.year(#dates.createNow())}]] Huneth, inc.</p>-->
+        </form>
+    </main>
+</div>
 </body>
 </html>
