--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,6 +23,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/conference/list}">학술대회</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" th:href="@{/board/list}">게시판</a>
+                    </li>
                     <!--
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
