--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -30,21 +30,31 @@
         </div>
     </div>
 
-    <form action="@{/board/form}" method="post">
+    <form th:action="@{/board/form}" method="post" th:object="${board}" >
+        <input type="hidden" th:field="*{id}">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input type="text" class="form-control" id="title">
+            <input type="text" class="form-control" id="title" th:field="*{title}"
+                   th:classappend="${#fields.hasErrors('title')} ? 'is-invalid' : 'is-valid'">
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
+                Looks good!
+            </div>
         </div>
         <div class="mb-3">
-            <label for="content" class="form-label">Example textarea</label>
-            <textarea class="form-control" id="content" rows="3"></textarea>
+            <label for="content" class="form-label">Content</label>
+            <textarea class="form-control" id="content" rows="3" th:field="*{content}"
+                      th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'"></textarea>
+            <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
+                Looks good!
+            </div>
+        </div>
+
+        <div class="text-end">
+            <a class="btn btn-light" href="#" th:href="@{/board/list}" role="button">취소</a>
+            <button type="submit" class="btn btn-primary">확인</button>
         </div>
     </form>
 
-    <div class="text-end">
-        <a class="btn btn-primary" href="#" th:href="@{/board/list}" role="button">취소</a>
-        <button type="submit" class="btn btn-primary">확인</button>
-    </div>
 </main>
 </body>
 </html>
