--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -30,9 +30,19 @@
         </div>
     </div>
 
-    <div>총 건수 : <span th:text="${#lists.size(boardList)}"></span></div>
+    <!--    <div>총 건수 : <span th:text="${#lists.size(boardList)}"></span></div>-->
+    <!--페이징일 경우-->
+    <div>총 건수 : <span th:text="${boardList.totalElements}"></span></div>
     <div class="table-responsive">
         <table class="table table-striped table-sm">
+            <colgroup>
+                <col width="5%">
+                <col width="*">
+                <col width="10%">
+                <col width="10%">
+                <col width="10%">
+                <col width="10%">
+            </colgroup>
             <thead>
             <tr>
                 <th>번호</th>
@@ -46,7 +56,7 @@
             <tbody>
             <tr th:each="item : ${boardList}">
                 <td th:text="${item.id}">1,001</td>
-                <td th:text="${item.title}">Lorem</td>
+                <td><a th:href="@{/board/form(id=${item.id})}" th:text="${item.title}">Lorem</a></td>
                 <td>노종민</td>
                 <td>2021-01-27</td>
                 <td>노종민</td>
@@ -54,6 +64,23 @@
             </tr>
             </tbody>
         </table>
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:classappend="${1 == (boardList.pageable.pageNumber + 1)} ? 'disabled'">
+                    <a class="page-link" href="#" th:href="@{/board/list(page=${boardList.pageable.pageNumber - 1})}"
+                       tabindex="-1" aria-disabled="true">Previous</a>
+                </li>
+                <!--0번부터 이기 때문에 + 1을 해준다.-->
+                <li class="page-item" th:classappend="${i == (boardList.pageable.pageNumber + 1)} ? 'disabled'"
+                    th:each="i : ${#numbers.sequence(startPage, endPage)}">
+                    <a class="page-link" href="#" th:href="@{/board/list(page=${i - 1})}" th:text="${i}">1</a>
+                </li>
+                <li class="page-item" th:classappend="${boardList.totalPages == (boardList.pageable.pageNumber + 1)} ? 'disabled'">
+                    <a class="page-link" th:href="@{/board/list(page=${boardList.pageable.pageNumber + 1})}" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
 
         <div class="text-end">
             <a class="btn btn-primary" href="#" th:href="@{/board/form}" role="button">Write</a>
