--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -18,7 +18,7 @@
 
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">게시판</h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
+       <!-- <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
                 <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
@@ -27,24 +27,21 @@
                 <span data-feather="calendar"></span>
                 This week
             </button>
-        </div>
-    </div>
-
-    <div class="d-flex justify-content-between">
-        <!--    <div>총 건수 : <span th:text="${#lists.size(boardList)}"></span></div>-->
-        <!--페이징일 경우-->
-        <div>총 건수 : <span th:text="${boardList.totalElements}"></span></div>
-
+        </div>-->
         <form class="row g-3" th:action="@{/board/list}" method="GET">
             <div class="col-auto">
                 <label for="searchText" class="visually-hidden">searchText</label>
                 <input type="text" class="form-control" id="searchText" name="searchText" th:value="${param.searchText}">
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">search</button>
+                <button type="submit" class="btn btn-secondary mb-3">search</button>
             </div>
         </form>
     </div>
+
+    <!--    <div>총 건수 : <span th:text="${#lists.size(boardList)}"></span></div>-->
+    <!--페이징일 경우-->
+    <div>총 건수 : <span th:text="${boardList.totalElements}"></span></div>
 
     <div class="table-responsive">
         <table class="table table-striped table-sm">
@@ -78,7 +75,7 @@
             </tbody>
         </table>
 
-        <nav aria-label="Page navigation example">
+        <nav aria-label="Page navigation example" th:if="${boardList.totalElements} > 0">
             <ul class="pagination justify-content-center">
                 <li class="page-item" th:classappend="${1 == (boardList.pageable.pageNumber + 1)} ? 'disabled'">
                     <a class="page-link" href="#" th:href="@{/board/list(page=${boardList.pageable.pageNumber - 1})}"
