--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -26,19 +26,19 @@
         <div class="row g-3">
             <div class="col-12">
                 <h4 class="mb-3">회원정보</h4>
-                <form class="needs-validation" novalidate>
+                <form th:action="@{/join}" class="needs-validation" novalidate method="post">
                     <div class="row g-3">
                         <div class="col-sm-12">
                             <label for="username" class="form-label">사용자이름</label>
-                            <input type="text" class="form-control" id="username" placeholder="name" value="" required>
+                            <input type="text" class="form-control" id="username" name="username" placeholder="username" required>
                             <div class="invalid-feedback">
-                                Your password is required.
+                                Your username is required.
                             </div>
                         </div>
 
                         <div class="col-12">
                             <label for="password" class="form-label">비밀번호</label>
-                            <input type="text" class="form-control" id="password" placeholder="password" required>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="password" required>
                             <div class="invalid-feedback">
                                 Your password is required.
                             </div>
@@ -46,24 +46,10 @@
 
                         <div class="col-12">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                            <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
                             <div class="invalid-feedback">
                                 Please enter a valid email address for shipping updates.
                             </div>
-                        </div>
-
-                        <label class="form-label">Phone Number</label>
-
-                        <div class="col-4 mt-0">
-                            <input type="text" class="form-control" id="phoneNumber" placeholder="010">
-                        </div>
-
-                        <div class="col-4 mt-0">
-                            <input type="text" class="form-control" placeholder="010">
-                        </div>
-
-                        <div class="col-4 mt-0">
-                            <input type="text" class="form-control" placeholder="010">
                         </div>
 
                         <div class="col-12">
@@ -96,78 +82,28 @@
                                 Please provide a valid state.
                             </div>
                         </div>
-
                     </div>
 
                     <hr class="my-4">
 
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="same-address">
-                        <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
+                    <div>
+                        <label for="affiliation" class="form-label">소속</label>
+                        <input type="text" class="form-control" id="affiliation" name="affiliation" placeholder="소속">
                     </div>
 
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="save-info">
-                        <label class="form-check-label" for="save-info">Save this information for next time</label>
+                    <div>
+                        <label for="licenseNumber" class="form-label">면허번호</label>
+                        <input type="text" class="form-control" id="licenseNumber" name="licenseNumber" placeholder="면허번호">
                     </div>
 
-                    <hr class="my-4">
-
-                    <h4 class="mb-3">Payment</h4>
-
-                    <div class="my-3">
-                        <div class="form-check">
-                            <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-                            <label class="form-check-label" for="credit">Credit card</label>
-                        </div>
-                        <div class="form-check">
-                            <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-                            <label class="form-check-label" for="debit">Debit card</label>
-                        </div>
-                        <div class="form-check">
-                            <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-                            <label class="form-check-label" for="paypal">PayPal</label>
-                        </div>
-                    </div>
-
-                    <div class="row gy-3">
-                        <div class="col-md-6">
-                            <label for="cc-name" class="form-label">Name on card</label>
-                            <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                            <small class="text-muted">Full name as displayed on card</small>
-                            <div class="invalid-feedback">
-                                Name on card is required
-                            </div>
-                        </div>
-
-                        <div class="col-md-6">
-                            <label for="cc-number" class="form-label">Credit card number</label>
-                            <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                            <div class="invalid-feedback">
-                                Credit card number is required
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <label for="cc-expiration" class="form-label">Expiration</label>
-                            <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                            <div class="invalid-feedback">
-                                Expiration date required
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <label for="cc-cvv" class="form-label">CVV</label>
-                            <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                            <div class="invalid-feedback">
-                                Security code required
-                            </div>
-                        </div>
+                    <div>
+                        <label for="occupation" class="form-label">직업</label>
+                        <input type="text" class="form-control" id="occupation" name="occupation" placeholder="직업">
                     </div>
 
                     <hr class="my-4">
 
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+                    <button class="w-100 btn btn-primary btn-lg" type="submit">회원가입</button>
                 </form>
             </div>
         </div>
