--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container" layout:fragment="content">
     <main class="form-signin">
-        <form>
+        <form th:action="@{/login}" method="post">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
             <label for="username" class="visually-hidden">Email address</label>
             <input type="text" id="username" class="form-control" name="username" required autofocus>
@@ -24,6 +24,7 @@
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
             <!--<p class="mt-5 mb-3 text-muted">&copy; [[${#dates.year(#dates.createNow())}]] Huneth, inc.</p>-->
         </form>
+        <a th:href="@{/join}">회원가입</a>
     </main>
 </div>
 </body>
