--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -2,18 +2,19 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/default_layout}">
+      layout:decorate="~{layouts/content_layout}">
 <head>
     <title>Login</title>
     <link rel="stylesheet" th:href="@{/css/signin.css}">
 </head>
 <body>
 <div class="container" layout:fragment="content">
-    <main class="form-signin">
+    <main class="form-signin text-center">
         <form th:action="@{/login}" method="post">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <h1 class="h1 fw-normal"><a th:href="@{/}" class="nav-link">HAMS</a></h1>
+            <h2 class="h3 mb-3 fw-normal">Please sign in</h2>
             <label for="username" class="visually-hidden">Email address</label>
-            <input type="text" id="username" class="form-control" name="username" required autofocus>
+            <input type="text" id="username" class="form-control" name="username" placeholder="Email" required autofocus>
             <label for="inputPassword" class="visually-hidden">Password</label>
             <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
             <div class="checkbox mb-3">
@@ -22,9 +23,12 @@
                 </label>
             </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-            <!--<p class="mt-5 mb-3 text-muted">&copy; [[${#dates.year(#dates.createNow())}]] Huneth, inc.</p>-->
         </form>
-        <a th:href="@{/join}">회원가입</a>
+
+        <div class="mt-2">
+            <a th:href="@{/join}">회원가입</a>
+            <p class="mt-5 text-muted">&copy; [[${#dates.year(#dates.createNow())}]] Huneth, inc.</p>
+        </div>
     </main>
 </div>
 </body>
