--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -7,7 +7,7 @@
     <title>게시판</title>
 </head>
 <body>
-<main class="container px-md-4" layout:fragment="content">
+<main class="container" layout:fragment="content">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
