--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,13 +15,13 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="#" th:href="@{/}">About</a>
+                        <a class="nav-link" aria-current="page" href="#" th:href="@{/about}">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/academy/list}">학회</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" th:href="@{/conference/list}">학술대회</a>
+                        <a class="nav-link" href="#" th:href="@{/conf/list}">학술대회</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" th:href="@{/board/list}">게시판</a>
