--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -11,18 +11,26 @@
 <div class="container" layout:fragment="content">
     <main class="form-signin text-center">
         <form th:action="@{/login}" method="post">
-            <h1 class="h1 fw-normal"><a th:href="@{/}" class="nav-link">HAMS</a></h1>
-            <h2 class="h3 mb-3 fw-normal">Please sign in</h2>
+            <h1 class="h2 py-3 fw-normal"><a th:href="@{/}" class="nav-link">HAMS</a></h1>
+
+            <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                Invalid username and password.
+            </div>
+            <div th:if="${param.logout}" class="alert alert-success" role="alert">
+                You have been logged out.
+            </div>
+
+            <h2 class="h4 mb-3 fw-normal">로그인 해주세요!</h2>
             <label for="username" class="visually-hidden">Email address</label>
             <input type="text" id="username" class="form-control" name="username" placeholder="Email" required autofocus>
             <label for="inputPassword" class="visually-hidden">Password</label>
             <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <input type="checkbox" value="remember-me"> 비밀번호 기억하기
                 </label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
         </form>
 
         <div class="mt-2">
