--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -67,8 +67,8 @@
             <tr th:if="${not #lists.isEmpty(boardList)}" th:each="item : ${boardList}">
                 <td th:text="${item.id}">1,001</td>
                 <td><a th:href="@{/board/form(id=${item.id})}" th:text="${item.title}">Lorem</a></td>
-                <td>노종민</td>
-                <td>2021-01-27</td>
+                <td th:text=${item.user.username}>노종민</td>
+                <td th:text=${item.creationDate}>2021-01-27</td>
                 <td>노종민</td>
                 <td>2021-01-27</td>
             </tr>
