--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -12,6 +12,7 @@
         <!--<meta name="_csrf" th:content="${_csrf.token}"/>
         <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
         <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
+        <script defer th:src="@{/fontawesome-free-5.15.2-web/js/all.js}"></script>
     </th:block>
 </head>
 <body>
