--- a/src/main/resources/templates/layouts/content_layout.html
+++ b/src/main/resources/templates/layouts/content_layout.html
@@ -3,13 +3,8 @@
       xmlns:th="http://www.thymleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Huneth acadeby management system">
-    <meta name="author" content="huneth">
-    <meta name="generator" content="nomi">
+    <th:block layout:replace="~{fragments/common :: commonFragment}"></th:block>
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">HAMS</title>
-    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}">
 </head>
 <body>
     <!--/*
