--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -30,7 +30,7 @@
                     <input type="checkbox" value="remember-me"> 비밀번호 기억하기
                 </label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">로그인 <i class="fas fa-sign-in-alt"></i></button>
         </form>
 
         <div class="mt-2">
