--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -29,7 +29,10 @@
                     <a class="nav-link" href="#" th:href="@{/conf/list}">학술대회</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/board/list}">게시판</a>
+                    <a class="nav-link" href="#" th:href="@{/bulletin/list}">게시판</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" th:href="@{/board/list}">공지사항</a>
                 </li>
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link" href="#" th:href="@{/admin}">관리자</a>
@@ -43,11 +46,11 @@
                     <a class="nav-link" th:href="@{/join}">Join</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post" sec:authorize="isAuthenticated()">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <form th:action="@{/logout}" method="post" sec:authorize="isAuthenticated()">
+                <a class="nav-link text-light dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-user-circle"></i>
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDarkDropdownMenuLink">
                     <li><span class="dropdown-item" sec:authentication="name">name</span></li>
                     <li><span class="dropdown-item" sec:authentication="principal.authorities">role</span></li>
                     <li><button type="submit" class="dropdown-item">Logout <i class="fas fa-sign-out-alt"></i></button></li>
