--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -14,27 +14,29 @@
             <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
         </div>
 
-        <form th:action="@{/join}" method="post">
+        <form th:action="@{/join}" method="post" th:object="${user}">
             <h4 class="mb-3">기본정보</h4>
             <div class="form-group">
                 <label for="username">사용자 아이디</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="아이디" required>
-                <div class="invalid-feedback">
+                <input type="text" class="form-control" id="username" placeholder="아이디"
+                       th:classappend="${#fields.hasErrors('username')} ? 'is-invalid'" th:field="*{username}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">
                     아이디는 필수 입니다.
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="password">비밀번호</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호" required>
-                <div class="invalid-feedback">
+                <input type="password" class="form-control" id="password" placeholder="비밀번호"
+                       th:classappend="${#fields.hasErrors('password')} ? 'is-invalid'" th:field="*{password}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                     비밀번호는 필수 입니다.
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="confirmPassword">비밀번호 확인</label>
-                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="비밀번호를 다시 입력해 주세요" required>
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="비밀번호를 다시 입력해 주세요">
                 <div class="invalid-feedback">
                     비밀번호 확인을 해야 합니다.
                 </div>
@@ -42,25 +44,27 @@
 
             <div class="form-group">
                 <label for="memberName">사용자 이름</label>
-                <input type="text" class="form-control" id="memberName" name="memberName" placeholder="회원이름" required>
-                <div class="invalid-feedback">
+                <input type="text" class="form-control" id="memberName" placeholder="회원이름"
+                       th:classappend="${#fields.hasErrors('memberName')} ? 'is-invalid'" th:field="*{memberName}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{memberName}">
                     아이디는 필수 입니다.
                 </div>
             </div>
 
-
             <div class="form-group">
                 <label for="phoneNumber">전화번호 <span class="text-muted">("-없이 입력해주세요")</span></label>
-                <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="01012345678" required>
-                <div class="invalid-feedback">
+                <input type="text" class="form-control" id="phoneNumber" placeholder="01012345678"
+                       th:classappend="${#fields.hasErrors('phoneNumber')} ? 'is-invalid'" th:field="*{phoneNumber}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{phoneNumber}">
                     전화번호를 입력해주세요
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="email">이메일</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
-                <div class="invalid-feedback">
+                <input type="email" class="form-control" id="email" placeholder="you@example.com"
+                       th:classappend="${#fields.hasErrors('email')} ? 'is-invalid'" th:field="*{email}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{email}">
                     이메일 인증을 해주세요.
                 </div>
             </div>
