--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -29,13 +29,13 @@
         </div>
 
         <div class="form-label-group">
-            <input type="text" id="username" class="form-control" placeholder="username" required autofocus>
-            <label for="username">Username</label>
+            <input type="text" id="username" name="username" class="form-control" placeholder="아이디" required autofocus>
+            <label for="username">아이디</label>
         </div>
 
         <div class="form-label-group">
-            <input type="password" id="password" class="form-control" placeholder="Password" required>
-            <label for="password">Password</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="비밀번호" required>
+            <label for="password">비밀번호</label>
         </div>
 
         <div class="checkbox mb-3">
