--- a/src/main/resources/templates/board/boardForm.html
+++ b/src/main/resources/templates/board/boardForm.html
@@ -6,7 +6,7 @@
 <head>
     <title>게시판</title>
 </head>
-<body>
+<body th:with="currentPage = 'NOTICE'">
 <main class="container" layout:fragment="content">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -17,7 +17,7 @@
     </nav>
 
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">게시판</h1>
+        <h1 class="h2">공지사항</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
                 <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -32,6 +32,7 @@
 
     <form th:action="@{/board/form}" th:object="${board}" method="POST">
         <input type="hidden" th:field="*{id}">
+        <input type="hidden" name="bulletin_id" th:value="${param.bullletin_id}">
         <div class="form-group">
             <label for="title" class="form-label">제목</label>
             <input type="text" class="form-control" id="title" th:field="*{title}"
