--- a/src/main/resources/templates/company/about.html
+++ b/src/main/resources/templates/company/about.html
@@ -6,7 +6,7 @@
 <head>
     <title>About</title>
 </head>
-<body>
+<body th:with="currentPage = 'ABOUT'">
     <main class="container" layout:fragment="content">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
