--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
         }
     </style>
 </head>
-<body>
+<body th:with="currentPage = 'HOME'">
     <main layout:fragment="content">
 
         <section class="py-5 text-center container">
