--- a/src/main/resources/templates/bulletin/bulletinList.html
+++ b/src/main/resources/templates/bulletin/bulletinList.html
@@ -4,9 +4,9 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default_layout}">
 <head>
-    <title>게시판 마스터</title>
+    <title>게시판</title>
 </head>
-<body>
+<body th:with="currentPage = 'BULLETIN'">
 <main class="container" layout:fragment="content">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -17,7 +17,7 @@
     </nav>
 
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">게시판 마스터</h1>
+        <h1 class="h2">게시판</h1>
         <!-- <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
                 <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -39,20 +39,14 @@
 
     <!-- <div>총 건수 : <span th:text="${#lists.size(bulletinList)}"></span></div> -->
     <!--페이징일 경우-->
-    <div class="mb-2">총 건수 : <span th:text="${bulletin.totalElements}"></span></div>
+    <div class="mb-2">총 건수 : <span th:text="${bulletinList.totalElements}"></span></div>
 
     <table class="table table-hover">
-        <colgroup>
-            <col width="10%">
-            <col width="*">
-            <col width="10%">
-            <col width="15%">
-            <col width="15%">
-        </colgroup>
         <thead class="thead-light">
         <tr>
             <th>번호</th>
-            <th>제목</th>
+            <th>게시판제목</th>
+            <th>게시판유형</th>
             <th>작성자</th>
             <th>작성일자</th>
             <th>수정일자</th>
@@ -60,8 +54,9 @@
         </thead>
         <tbody>
         <tr th:if="${not #lists.isEmpty(bulletinList)}" th:each="item : ${bulletinList}">
-            <td th:text="${item.id}">게시판 제목</td>
-            <td><a th:href="@{/board/form(id=${item.id})}" th:text="${item.title}">Lorem</a></td>
+            <td th:text="${item.id}">번호</td>
+            <td><a th:href="@{/bulletin/form(id=${item.id})}" th:text="${item.title}">Lorem</a></td>
+            <td th:text="${item.type}">노종민</td>
             <td th:text="${item.user.username}">노종민</td>
             <td th:text="${#dates.format(item.creationDate, 'yyyy-MM-dd')}">2021-01-27</td>
             <td th:text="${#dates.format(item.lastUpdateDate, 'yyyy-MM-dd')}">2021-02-03</td>
@@ -75,22 +70,22 @@
     <nav aria-label="Page navigation example" th:if="${bulletinList.totalElements} > 0">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${1 == (bulletinList.pageable.pageNumber + 1)} ? 'disabled'">
-                <a class="page-link" href="#" th:href="@{/board/list(page=${bulletinList.pageable.pageNumber - 1})}"
+                <a class="page-link" href="#" th:href="@{/bulletin/list(page=${bulletinList.pageable.pageNumber - 1})}"
                    tabindex="-1" aria-disabled="true">Previous</a>
             </li>
             <!--0번부터 이기 때문에 + 1을 해준다.-->
             <li class="page-item" th:classappend="${i == (bulletinList.pageable.pageNumber + 1)} ? 'disabled'"
                 th:each="i : ${#numbers.sequence(startPage, endPage)}">
-                <a class="page-link" href="#" th:href="@{/board/list(page=${i - 1})}" th:text="${i}">1</a>
+                <a class="page-link" href="#" th:href="@{/bulletin/list(page=${i - 1})}" th:text="${i}">1</a>
             </li>
             <li class="page-item" th:classappend="${bulletinList.totalPages == (bulletinList.pageable.pageNumber + 1)} ? 'disabled'">
-                <a class="page-link" th:href="@{/board/list(page=${bulletinList.pageable.pageNumber + 1})}" href="#">Next</a>
+                <a class="page-link" th:href="@{/board/bulletin(page=${bulletinList.pageable.pageNumber + 1})}" href="#">Next</a>
             </li>
         </ul>
     </nav>
 
     <div class="text-right">
-        <a class="btn btn-primary" href="#" th:href="@{/board/form}" role="button">글쓰기</a>
+        <a class="btn btn-primary" href="#" th:href="@{/bulletin/form}" role="button">글쓰기</a>
     </div>
 </main>
 </body>
