--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -6,7 +6,7 @@
 <head>
     <title>회원가입</title>
 </head>
-<body class="bg-light">
+<body class="bg-light" th:with="currentPage = 'JOIN'">
     <main class="container w-50" layout:fragment="content">
         <div class="py-5 text-center">
 <!--            <img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
